// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea component sanity matches default snapshot 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1rem;
  line-height: 1;
  height: 48px;
  padding: 0 1rem;
  border: 1px solid;
  background: #FFFFFF;
  border-color: grey;
  border-radius: 1px;
  box-shadow: 1;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1rem;
  line-height: 1;
  height: auto;
  background: #FFFFFF;
  padding: 16px;
}

.c0:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c0:focus {
  outline: none;
  border-color: #000;
}

.c0:disabled {
  opacity: 0.4;
  pointer-events: none;
}

<textarea
  class="c0"
  primarycolor="#000"
>
  
</textarea>
`;

exports[`Textarea component sanity matches themed snapshot 1`] = `
.c1 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1rem;
  line-height: 1;
  height: 48px;
  padding: 0 1rem;
  border: 1px solid;
  background: #FFFFFF;
  border-color: #CCC;
  border-radius: 4px;
  box-shadow: 0px 2px 4px rgba(0,0,0,0.1);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  font-size: 1rem;
  line-height: 1;
  height: auto;
  background: #FFFFFF;
  padding: 16px;
}

.c1:hover {
  box-shadow: 0px 2px 6px rgba(0,0,0,0.3);
}

.c1:focus {
  outline: none;
  border-color: #4E3FCE;
}

.c1:disabled {
  opacity: 0.4;
  pointer-events: none;
}

.c0 {
  font-size: 1em;
  font-family: "Source Sans Pro",-apple-system,sans-serif;
  color: #3F3D4B;
}

<div
  class="c0"
>
  <textarea
    class="c1"
    primarycolor="#4E3FCE"
  >
    
  </textarea>
</div>
`;
